--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,4 +7,5 @@ message("Examples to be built: ${ALL_EXAMPLES}")
 foreach(example ${ALL_EXAMPLES})
     add_executable(${example})
     target_sources(${example} PRIVATE ${example}.cpp)
+    target_include_directories(${exxswample} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 endforeach()
