--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,10 +14,7 @@ target_sources(tests.scope PRIVATE scope.test.cpp)
 
 target_link_libraries(tests.scope PRIVATE Catch2::Catch2WithMain)
 
-target_include_directories(
-    tests.scope
-    PRIVATE ${CMAKE_SOURCE_DIR}/include
-)
+target_include_directories(tests.scope PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 include(CTest)
 include(Catch)
