--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
 
-set(ALL_EXAMPLES scope_example)
+set(ALL_EXAMPLES scope_example unique_resource)
 
 message("Examples to be built: ${ALL_EXAMPLES}")
 
