--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -73,4 +73,4 @@ jobs:
         with:
           tool_name: pre-commit
           level: warning
-          reviewdog_flags: "-fail-level=error"
+          reviewdog_flags: "-fail-level=none"
