--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,13 +9,20 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(Catch2)
 
-add_executable(tests.scope)
-target_sources(tests.scope PRIVATE scope.test.cpp)
+set(ALL_TESTNAMES scope unique_resource)
 
-target_link_libraries(tests.scope PRIVATE Catch2::Catch2WithMain)
-
-target_include_directories(tests.scope PRIVATE ${CMAKE_SOURCE_DIR}/include)
+message("Tests to be built: ${ALL_TESTS}")
 
 include(CTest)
 include(Catch)
-catch_discover_tests(tests.scope)
+
+
+foreach(testname ${ALL_TESTNAMES})
+    add_executable(test.${testname})
+    target_sources(test.${testname} PRIVATE ${testname}.test.cpp)
+    target_include_directories(test.${testname} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+    target_link_libraries(test.{testname} PRIVATE Catch2::Catch2WithMain)
+endforeach()
+
+
+catch_discover_tests(test.scope test.unique_resource)
