driveby fix on cmake as noticed list of tests to build isn't printed

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,7 +11,7 @@ FetchContent_MakeAvailable(Catch2)
 
 set(ALL_TESTNAMES scope_success scope_exit scope_fail unique_resource)
 
-message("Tests to be built: ${ALL_TESTS}")
+message("Tests to be built: ${ALL_TESTNAMES}")
 
 include(CTest)
 include(Catch)
