--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,5 +7,5 @@ message("Examples to be built: ${ALL_EXAMPLES}")
 foreach(example ${ALL_EXAMPLES})
     add_executable(${example})
     target_sources(${example} PRIVATE ${example}.cpp)
-    target_include_directories(${example} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+    target_link_libraries(${example} PRIVATE beman::scope)
 endforeach()
