--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,18 @@ message("Tests to be built: ${ALL_TESTNAMES}")
 
 include(Catch)
 
+add_executable(test.module)
+target_sources(test.module PRIVATE module.test.cpp)
+target_compile_features(test.module PRIVATE cxx_std_20)
+target_compile_options(test.module PRIVATE "-fmodules")
+# target_link_libraries(
+#     test.module
+#     PUBLIC FILE_SET TYPE CXX_MODULES include/beman/scope/beman.scope.cppm
+#     PRIVATE Catch2::Catch2WithMain beman::scope
+# )
+# catch_discover_tests(test.module)
+
+
 foreach(testname ${ALL_TESTNAMES})
     add_executable(test.${testname})
     target_sources(test.${testname} PRIVATE ${testname}.test.cpp)
