--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,14 +9,9 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(Catch2)
 
-message(
-    "Compiler is: ${CMAKE_CXX_COMPILER_ID} version:  ${CMAKE_CXX_COMPILER_VERSION}"
-)
 
 # module tests will only compile with gcc15 or clang20 and above
-if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 20)
-    set(ALL_TESTNAMES scope_success scope_exit scope_fail unique_resource module)
-elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 15)
+if(CMAKE_CXX_SCAN_FOR_MODULES)
     set(ALL_TESTNAMES scope_success scope_exit scope_fail unique_resource module)
 else()
     set(ALL_TESTNAMES scope_success scope_exit scope_fail unique_resource)
