--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER_VERSION VERSIO
     set(CMAKE_CXX_SCAN_FOR_MODULES 1)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 15)
     set(CMAKE_CXX_SCAN_FOR_MODULES 1)
-elseif()
+else()
     set(CMAKE_CXX_SCAN_FOR_MODULES 0)
 endif()
 
