Feat: apply precommit autoupdate

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,21 +5,17 @@ include(FetchContent)
 FetchContent_Declare(
     Catch2
     GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-    GIT_TAG v3.8.0
+    GIT_TAG v3.11.0
+    EXCLUDE_FROM_ALL
+    # FIND_PACKAGE_ARGS 3.11
 )
 FetchContent_MakeAvailable(Catch2)
 
+set(ALL_TESTNAMES scope_success scope_exit scope_fail unique_resource)
+
 # module tests will only compile with gcc15 or clang20 and above
 if(CMAKE_CXX_SCAN_FOR_MODULES)
-    set(ALL_TESTNAMES
-        scope_success
-        scope_exit
-        scope_fail
-        unique_resource
-        module
-    )
-else()
-    set(ALL_TESTNAMES scope_success scope_exit scope_fail unique_resource)
+    list(APPEND ALL_TESTNAMES module)
 endif()
 
 message("Tests to be built: ${ALL_TESTNAMES}")
