--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,8 @@ install(
 
     FILE_SET CXX_MODULES
         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    CXX_MODULES_BMI
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/beman.scope/bmi-${CMAKE_CXX_COMPILER_ID}_$<CONFIG>
     FILE_SET HEADERS
 )
 
